--- a/biography.html
+++ b/biography.html
@@ -38,7 +38,7 @@
     <a href="teaching.html" class="w3-bar-item w3-button w3-padding-large">TEACHING</a>
     <a href="biography.html" class="w3-bar-item w3-button w3-padding-large">BIOGRAPHY</a>
     <a href="blog.html" class="w3-bar-item w3-button w3-padding-large">BLOG</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+   
 </div>
 
 <!-- Header -->
@@ -51,9 +51,9 @@
     <!-- Biography Section -->
     <div class="w3-row w3-padding-64" id="biography">
         <div class="w3-col m12 w3-padding-large">
-            <h1 class="w3-center">Biography</h1>
+            
             <p class="w3-large"><b>HTL Steyr:</b> Matura</p>
-            <p class="w3-large"><b>Universität Salzburg: UF Mathematik / Bewegung und Sport
+            <p class="w3-large"><b>Universität Salzburg:</b> UF Mathematik / Bewegung und Sport
 
 
 
