--- a/biography.html
+++ b/biography.html
@@ -54,7 +54,7 @@
             
             <p class="w3-large"><b>HTL Steyr:</b> Matura</p>
             <p class="w3-large"><b>Universität Salzburg:</b> UF Mathematik / Bewegung und Sport
-            <p class="w3-large"><b>Lehrender:</b> <ul>    <li>bis 2022 HTL LINZ BAU&DESIGN</li>
+            <p class="w3-large"><b>Lehrender:</b> <ul>    <li>Bis 2022 HTL LINZ BAU&DESIGN</li>
                                                             <li>Seit 2022 HTL STEYR</li>
                                                     </ul>
 
