--- a/index.html
+++ b/index.html
@@ -1,81 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Stefan Klaner - Applied Math and Engineering</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stefan Klaner - Applied Math and Engineering</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
         }
-        .w3-bar .w3-button {
-            padding: 16px;
-        }
-        .profile-pic {
-            max-width: 150px;
-            margin: 20px auto;
-            display: block;
-            border-radius: 50%;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .section {
-            margin: 20px 0;
-        }
-        .section h2 {
-            margin-top: 0;
-        }
-        footer {
-            padding: 10px 0;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-        }
-        @media only screen and (max-width: 600px) {
-            nav a {
-                margin: 5px 0;
-            }
+        .w3-bar, .w3-bar a {
+            text-decoration: none;
         }
     </style>
 </head>
-<body>
-    <!-- Navigation Bar -->
-    <div class="w3-bar w3-black w3-card">
-        <a href="index.html" class="w3-bar-item w3-button w3-wide">HOME</a>
-        <div class="w3-right w3-hide-small">
-            <a href="teaching.html" class="w3-bar-item w3-button">TEACHING</a>
-            <a href="biography.html" class="w3-bar-item w3-button">BIOGRAPHY</a>
-            <a href="blog.html" class="w3-bar-item w3-button">BLOG</a>
-            
-        </div>
+<body class="w3-light-grey">
+
+<!-- Navigation Bar -->
+<div class="w3-bar w3-dark-grey w3-large">
+    <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="float: left;">Home</a>
+    <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
+    <a href="biography.html" class="w3-bar-item w3-button w3-mobile">Biography</a>
+    <a href="blog.html" class="w3-bar-item w3-button w3-mobile">Blog</a>
+    <a href="contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-center w3-padding-32">
+    <h1><b>Stefan Klaner</b></h1>
+    <p>Professor of Applied Math and Engineering</p>
+    <img src="profile.jpg" alt="Stefan Klaner" class="w3-circle w3-margin-top" style="width:150px">
+</header>
+
+<!-- Main content -->
+<div class="w3-content w3-padding-32">
+
+    <!-- Contact Section -->
+    <div class="w3-container w3-white w3-margin-bottom w3-card-4">
+        <h2>Contact</h2>
+        <p><a href="https://www.htl-steyr.ac.at/">HTL STEYR</a></p>
+        <p>Schlüsselhofgasse 63, 4400 Steyr</p>
+        <p>Email: <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a></p>
     </div>
 
-    <!-- Header -->
-    <header class="w3-container w3-center" style="padding:128px 16px; background-color: #333; color: #fff;">
-        <h1 class="w3-margin w3-jumbo">Stefan Klaner</h1>
-        <p class="w3-xlarge">Professor HTL STEYR</p>
-        <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
-    </header>
+</div>
 
-    <!-- Main Content -->
-    <div class="w3-container w3-padding-32">
-        <section class="w3-card w3-margin w3-padding section" id="contact">
-            <h2>Contact</h2>
-            <p><a href="https://www.htl-steyr.ac.at/">HTL STEYR</a></p>
-            <p>Schlüsselhofgasse 63, 4400 Steyr</p>
-            <p>Email: <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a></p>
-        </section>
-    </div>
+<!-- Footer -->
+<footer class="w3-container w3-dark-grey w3-padding-16">
+    <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
+</footer>
 
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-16">
-        <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
-    </footer>
 </body>
 </html>
+
 
 
 
