--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32">
     <h1><b>Stefan Klaner</b></h1>
-    <p>Professor of Applied Math and Engineering</p>
-    <img src="profile.jpg" alt="Stefan Klaner" class="w3-circle w3-margin-top" style="width:150px">
+    <p>Professor HTL STEYR</p>
+    <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
 </header>
 
 <!-- Main content -->
