--- a/blog.html
+++ b/blog.html
@@ -71,4 +71,17 @@
 <!-- Navigation Bar -->
 <div class="w3-bar w3-dark-grey w3-large">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile
+<!-- Navbar -->
+<div class="w3-bar w3-black w3-card">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="teaching.html" class="w3-bar-item w3-button w3-padding-large">TEACHING</a>
+    <a href="biography.html" class="w3-bar-item w3-button w3-padding-large">BIOGRAPHY</a>
+    <a href="blog.html" class="w3-bar-item w3-button w3-padding-large">BLOG</a>
+   
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-center w3-padding-32">
+    <h1 class="w3-xxxlarge"><b>Biography</b></h1>
+</header>
 
