--- a/blog.html
+++ b/blog.html
@@ -85,3 +85,25 @@
     <h1 class="w3-xxxlarge"><b>Biography</b></h1>
 </header>
 
+<main class="w3-container w3-padding-32">
+        <section class="blog-container">
+            <div class="twitter-widget-container">
+                <a class="twitter-timeline" href="https://twitter.com/YourUsername">Tweets by YourUsername</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div class="blog-card">
+                <img src="blog_image_1.jpg" alt="Blog Image 1">
+                <h3>Blog Post Title 1</h3>
+                <p>Short excerpt of the blog post. This gives readers an idea of what the post is about.</p>
+            </div>
+            <div class="blog-card">
+                <img src="blog_image_2.jpg" alt="Blog Image 2">
+                <h3>Blog Post Title 2</h3>
+                <p>Short excerpt of the blog post. This gives readers an idea of what the post is about.</p>
+            </div>
+        </section>
+        <a href="index.html" class="back-button">Back to Main Page</a>
+    </main>
+
+
+
