--- a/blog.html
+++ b/blog.html
@@ -10,21 +10,7 @@
         body {
             font-family: 'Roboto', sans-serif;
         }
-        .back-button {
-            display: block;
-            width: fit-content;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #009688;
-            color: white;
-            text-align: center;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-        .back-button:hover {
-            background-color: #00796b;
-        }
+
         .profile-pic {
             max-width: 150px;
             margin: 20px auto;
@@ -82,7 +68,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32">
-    <h1 class="w3-xxxlarge"><b>Biography</b></h1>
+    <h1 class="w3-xxxlarge"><b>Blog</b></h1>
 </header>
 
 <main class="w3-container w3-padding-32">
