--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
 <body class="w3-light-grey">
 
 <!-- Navigation Bar -->
-<div class="w3-bar w3-dark-grey w3-large">
+<div class="w3-bar w3-black w3-card">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile
 <!-- Navbar -->
 <div class="w3-bar w3-black w3-card">
