--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="w3-light-grey">
 
 <!-- Navigation Bar -->
-<div class="w3-bar w3-dark-grey w3-large">
+<div class="w3-bar w3-black w3-card">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="float: left;">Home</a>
     <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
     <a href="biography.html" class="w3-bar-item w3-button w3-mobile">Biography</a>
