--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32">
     <h1><b>Stefan Klaner</b></h1>
+    <img src="Stefan.jpg" alt="Stefan Klaner" style="width:60px; height:60px;" class="w3-circle w3-margin-top">
     <p>Professor HTL STEYR</p>
     <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
 </header>
