--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         .w3-bar, .w3-bar a {
             text-decoration: none;
         }
+        .header-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 32px;
+        }
+        .header-container h1 {
+            margin: 0 20px;
+        }
+        .header-container img {
+            margin: 0 20px;
+        }
+        @media only screen and (max-width: 600px) {
+            .header-container {
+                flex-direction: column;
+            }
+            .header-container h1 {
+                margin-bottom: 10px;
+            }
+        }
     </style>
 </head>
 <body class="w3-light-grey">
@@ -23,20 +44,18 @@
     <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
     <a href="biography.html" class="w3-bar-item w3-button w3-mobile">Biography</a>
     <a href="blog.html" class="w3-bar-item w3-button w3-mobile">Blog</a>
-   
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32">
+<header class="header-container w3-container w3-center">
     <h1><b>Stefan Klaner</b></h1>
-    <img src="Stefan.JPG" alt="Stefan Klaner" width="100px" height="100" class="logo w3-image">
+    <img src="Stefan.JPG" alt="Stefan Klaner" width="100px" height="100" class="w3-image">
     <p>Professor HTL STEYR</p>
-    <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
+    <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="w3-image">
 </header>
 
 <!-- Main content -->
 <div class="w3-content w3-padding-32">
-
     <!-- Contact Section -->
     <div class="w3-container w3-white w3-margin-bottom w3-card-4">
         <h2>Contact</h2>
@@ -44,7 +63,6 @@
         <p>Schlüsselhofgasse 63, 4400 Steyr</p>
         <p>Email: <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a></p>
     </div>
-
 </div>
 
 <!-- Footer -->
