--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
             text-align: center;
         }
         .header-container img {
-            margin: 0 20px;
             width: 100px; /* Einheitliche Bildgröße */
             height: 100px; /* Einheitliche Bildgröße */
         }
+        .title-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
         .content {
             text-align: center; /* Zentriert den Text in der Hauptinhaltsregion */
-        }
-        @media only screen and (max-width: 600px) {
-            .header-container {
-                flex-direction: row; /* Beibehalten der Zeilenanordnung */
-            }
         }
     </style>
 </head>
@@ -53,7 +52,10 @@
 <header class="header-container w3-container w3-center">
     <img src="Stefan.JPG" alt="Stefan Klaner" class="w3-image">
     <h1><b>Stefan Klaner</b></h1>
-    <img src="farb_jpg.jpg" alt="HTL Steyr" class="w3-image">
+    <div class="title-container">
+        <p>Professor HTL STEYR</p>
+        <img src="farb_jpg.jpg" alt="HTL Steyr" class="w3-image">
+    </div>
 </header>
 
 <!-- Main content -->
