--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         }
         .header-container {
             display: flex;
+            flex-direction: column; /* Ändern auf Spalte für vertikale Anordnung */
             align-items: center;
             justify-content: center;
             padding: 32px;
-            flex-direction: row; /* Stellt sicher, dass es immer in einer Reihe bleibt */
         }
         .header-container h1 {
-            margin: 0 20px;
+            margin: 10px 0; /* Abstand um den Namen */
             text-align: center;
         }
         .header-container img {
@@ -32,6 +32,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 10px; /* Abstand über dem Titel */
         }
         .content {
             text-align: center; /* Zentriert den Text in der Hauptinhaltsregion */
@@ -76,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
